# libnfcap

./: .gitignore  CMakeLists.txt  README.md  netglyph-libnfcap.code-workspace
examples/: CMakeLists.txt
examples/read_file/: main.c  parse_args.c  parse_args.h
nfcap/: nfcap.h  nfcap_types.h
nxcap/: nxcap.h  nxcap_types.h
src/: metrics.h
src/core/flow/: flow_context.c  flow_context.h  flow_key.c  flow_key.h
src/core/flow_manager/: flow_list.c  flow_list.h  flow_manager.c  flow_manager.h  hashtable.c  hashtable.h
src/core/flow_manager/hash/: mmh3.c  mmh3.h  siphash.c
src/core/flow_manager/hashtable/: hashtable.c  hashtable.h
src/core/flow_manager/hashtable/hash_functions/: mmh3.c  mmh3.h  siphash.c
src/core/packet/: packet_record.c  packet_record.h
src/flow_manager/: flow_context.c  flow_context.h  flow_hashtable.c  flow_hashtable.h  flow_key.c  flow_list.c  flow_list.h  flow_manager.c  flow_manager.h  mmh3.c  mmh3.h  packet_record.c  packet_record.h
src/modules/: ip_dedup.c  ip_dedup.h  ip_defrag.c  ip_defrag.h
src/modules/deduplication/: duplicates.c  duplicates.h
src/nfcap/: file.c  file.h
src/nfcap/protobuf/: CMakeLists.txt  c-wrapper.cc  c-wrapper.h  nfcap-flow.proto  nfcap-ip.proto  nfcap-ipv6.proto  nfcap-packet.proto  nfcap-tcp.proto  nfcap-udp.proto
src/nxcap/: file.c  file.h
src/nxcap/protobuf/: CMakeLists.txt  c-wrapper.cc  c-wrapper.h  nxcap-flow.proto  nxcap-ip.proto  nxcap-ipv6.proto  nxcap-packet.proto  nxcap-tcp.proto  nxcap-udp.proto
src/pcap/: packet_handler.c  packet_handler.h  pcap_read.c  pcap_read.h
src/proto/: dlt_ssl.c  dlt_ssl.h  ethernet.c  ethernet.h  ipv4.c  ipv4.h  ipv6.c  ipv6.h  tcp.c  tcp.h  udp.c  udp.h
src/utils/: hash.c  hash.h  timeval.c  timeval.h
templates/: config.h.in  vscode.code-snippets.in
tests/: CMakeLists.txt  test_hashtables.c
tests/pcap/: ip_fragmented.pcap  ipv6_udp_oneflow.pcap  tcp_multiple_rst.pcap  tcp_port_reused.pcap  tcp_sample_1flow.pcap  tcp_sample_1pkt.pcap
